# mnn.dart

./: .clangd  .gitignore  CHANGELOG.md  Makefile  README.md  analysis_options.yaml  ffigen.yaml  ffigen_stbi.yaml  pubspec.yaml
.github/workflows/: test_publish.yml
example/: class_desc.txt  image_recognition.dart  main.dart  mnn_example.dart
example/image_recognization/: README.md  pubspec.yaml
example/image_recognization/android/app/: build.gradle.kts
example/image_recognization/android/app/src/main/: AndroidManifest.xml
example/image_recognization/android/app/src/main/kotlin/dev/rainyl/image_recognization/: MainActivity.kt
example/image_recognization/ios/Runner/: Info.plist
example/image_recognization/ios/Runner.xcodeproj/: project.pbxproj
example/image_recognization/lib/: main.dart
example/image_recognization/linux/: CMakeLists.txt
example/image_recognization/linux/runner/: my_application.cc
example/image_recognization/macos/Runner.xcodeproj/: project.pbxproj
example/image_recognization/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/image_recognization/macos/Runner/Configs/: AppInfo.xcconfig
example/image_recognization/test/: widget_test.dart
example/image_recognization/web/: index.html  manifest.json
example/image_recognization/windows/: CMakeLists.txt
example/image_recognization/windows/runner/: Runner.rc  main.cpp
example/recognize/: pubspec.yaml
hook/: build.dart
lib/: cv.dart  expr.dart  mnn.dart  nn.dart  numpy.dart
lib/src/: autotime.dart  backend.dart  base.dart  constant.dart  exception.dart  formatter.dart  halide_runtime.dart  image.dart  image_process.dart  interpreter.dart  matrix.dart  rect.dart  runtime_info.dart  schedule.dart  session.dart  tensor.dart  vec.dart
lib/src/core/: autotime.dart  backend.dart  base.dart  constant.dart  halide_runtime.dart  interpreter.dart  runtime_info.dart  schedule.dart  session.dart  tensor.dart  vec.dart
lib/src/cv/: enums.dart  image.dart  image_process.dart  matrix.dart  mnn_cv.dart  rect.dart  types.dart
lib/src/expr/: expr.dart  op.dart  utils.dart
lib/src/g/: mnn.g.dart  stbi.g.dart
lib/src/hook_helpers/: parse_user_define.dart
lib/src/image/: enums.dart  image.dart
lib/src/nn/: executor.dart  module.dart
lib/src/numpy/: linalg.dart  numpy.dart  random.dart
lib/src/stb_image/: enum.dart  exception.dart  image.dart
src/: .clang-format  CMakeLists.txt  autotime.cpp  autotime.h  base.cpp  base.h  cv.cpp  cv.h  error_code.h  expr.cpp  expr.h  expr_op.cpp  expr_op.h  image_process.cpp  image_process.h  interpreter.cpp  interpreter.h  mnn_forward_type.h  mnn_stb_image.cpp  mnn_stb_image.h  mnn_type.h  module.cpp  module.h  stdvec.cpp  stdvec.h  tensor.cpp  tensor.h
src/include/MNN/: Rect.h
src/include/MNN/expr/: Executor.hpp
src/include/mnn_c/: autotime.h  base.h  cv.h  expr.h  expr_op.h  image_process.h  interpreter.h  mnn_stb_image.h  module.h  stdvec.h  tensor.h
src/test/: test_interpreter.cpp
test/: autotime_test.dart  image_test.dart  interpreter_test.dart  list_element_equals.dart  tensor_test.dart
test/core/: autotime_test.dart  tensor_test.dart
test/cv/: image_test.dart  mnn_cv_test.dart
test/data/: mnist-8.mnn
test/expr/: VARP_test.dart  op_test.dart  variable_test.dart
test/nn/: executor_test.dart  module_test.dart  nn_test.dart  yolo_test.dart
test/numpy/: linalg_test.dart  numpy_test.dart  random_test.dart
